2002-03-09  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (cb_dialog_solve_clicked): Plug a leak.

2002-03-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* sheet-order.glade : change button order
	* cell-sort.glade : ditto
	* dialog-sheet-order.c : various minor modifications and support
	  deletion of sheets.

2002-03-09  Jody Goldberg <jody@gnome.org>

	* dialog-paste-special.c : fix.

2002-03-08  Jon K Hellan  <hellan@acm.org>

	* dialog-plugin-manager.c (cb_pm_button_activate_plugin_clicked):
	Add parameter force_load = FALSE to activate_plugin call.
	(cb_pm_button_activate_all_clicked): Add parameter force_load =
	FALSE to plugin_db_activate_plugin_list call.

2002-03-08  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (cb_dialog_solve_clicked): Make the reports only
	if solver found a proper sollution.
	(cb_dialog_solve_clicked): Added dialog to warn if the sensitivity
	or limits report cannot be created.
	(cb_dialog_solve_clicked): Added a check if target range or input
	range is not set.

2002-03-07  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-sheet-order.c (cb_selection_changed) : handle delete button
	(cb_toggle_deleted) : new
	(populate_sheet_list) : handle `is_deleted' column
	(move_cb) : ditto
	(cb_add_clicked) : ditto
	(cb_delete_clicked) : implement
	(cb_ok_clicked) : ignore deleted

2002-03-06  Jody Goldberg <jody@gnome.org>

	* dialog-advanced-filter.c (advanced_filter) : Use eval_pos_init_sheet.

	* dialog-solver.c (cb_dialog_solve_clicked) : fix leak.

2002-03-07  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.glade: added `Program' checkbutton for program report and
	made the Limits reporting button sensitive.

2002-03-07  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* sheet-order.glade : add buttons
	* cell-sort.glade : reorder buttons
	* dialog-sheet-order.c (cb_row_inserted) : deleted
	(cb_selection_changed) : add more buttons
	(populate_sheet_list) : remove "row_inserted" handler