@@ -1,6 +1,9 @@
 2002-03-09  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>
 
 	* dialog-solver.c (cb_dialog_solve_clicked): Plug a leak.
+	(grab_cells): Use append instead of prepend.  The order matters.
+	(convert_constraint_format): Ditto.
+	(revert_constraint_format): Ditto.
 
 2002-03-09  Andreas J. Guelzow <aguelzow@taliesin.ca>
 
